parser works now, had to tweak the grammar and input programs